tests/invalid/set_difference_update_missing_elem_eq/main.py
def run_case() -> None:
    a: set[set[int]] = set()
    b: set[set[int]] = set()
    a.difference_update(b)


if __name__ == "__main__":
    run_case()
